<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/register_bg"
    android:orientation="vertical"
    tools:context=".Information_Activity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/normal_height54"
        android:background="@drawable/title_bg"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/normal_height54"
            android:layout_height="@dimen/normal_height54"
            android:layout_gravity="center"
            android:background="@drawable/head_background_select"
            android:clickable="true"
            android:scaleType="centerInside"
            android:src="@drawable/img_back"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/img_back"
            android:background="@drawable/head_background_select"
            android:gravity="center"
            android:text="@string/user_edit"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize18" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/user_password"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize23"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="@dimen/normal_height54"
            android:layout_height="@dimen/normal_height54"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/head_background_select"
            android:gravity="center"
            android:text="@string/user_save"
            android:textColor="@color/save"
            android:textSize="@dimen/textsize18" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marging10"
        android:layout_marginLeft="@dimen/marging10"
        android:layout_marginTop="30dp"
        android:background="@drawable/head_background_select"
        android:gravity="center"
        android:text="@string/oldpassword"
        android:textColor="@color/welcome_textColor"
        android:textSize="@dimen/textsize22" />

    <AutoCompleteTextView
        android:id="@+id/actv_password"
        style="@style/login_edittext_style"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/marging10"
        android:layout_marginRight="@dimen/marging10"
        android:enabled="false"
        android:password="true"
        android:textColor="@color/grey"
        android:textSize="@dimen/textsize18" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marging10"
        android:layout_marginLeft="@dimen/marging10"
        android:layout_marginTop="30dp"
        android:background="@drawable/head_background_select"
        android:gravity="center"
        android:text="@string/newpassword"
        android:textColor="@color/welcome_textColor"
        android:textSize="@dimen/textsize22" />

    <AutoCompleteTextView
        android:id="@+id/actv_password_enable"
        style="@style/login_edittext_style"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/marging10"
        android:layout_marginRight="@dimen/marging10"
        android:enabled="false"
        android:password="true"
        android:textColor="@color/grey"
        android:textSize="@dimen/textsize18" />

</LinearLayout>