<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/register_bg"
    android:orientation="vertical"
    tools:context=".Information_Activity" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/normal_height54"
        android:background="@drawable/title_bg"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="@dimen/normal_height54"
            android:layout_height="@dimen/normal_height54"
            android:background="@drawable/head_background_select"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize18" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="问答"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize23"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_next"
            android:layout_width="@dimen/normal_height54"
            android:layout_height="@dimen/normal_height54"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="@drawable/head_background_select"
            android:gravity="center"
            android:text="@string/nextdo"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize18"
            android:visibility="gone" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:padding="@dimen/marging10" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/img_icon"
                    android:layout_width="@dimen/normal_height48"
                    android:layout_height="@dimen/normal_height48"
                    android:scaleType="centerInside"
                    android:src="@drawable/item_logo5" />

                <TextView
                    android:id="@+id/tv_realName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/marging10"
                    android:layout_toRightOf="@id/img_icon"
                    android:text="王周俊"
                    android:textColor="@color/blcak_grey" />
                <!--
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="答谢"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:id="@+id/tv_questionState"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/text_color" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="红心"
                        android:textColor="@color/text_color" />
                </LinearLayout>
                -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_realName"
                    android:layout_marginLeft="@dimen/marging10"
                    android:layout_marginTop="@dimen/marging10"
                    android:layout_toRightOf="@id/img_icon"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_crtime"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_weight="1.0"
                        android:text="sad"
                        android:textColor="@color/font_grey1" />

                    <TextView
                        android:id="@+id/tv_aging"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="asd"
                        android:textColor="@color/font_grey1" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:ellipsize="marquee"
                android:ems="3"
                android:paddingBottom="24dp"
                android:paddingTop="8dp"
                android:textColor="@color/blcak_grey" />

            <AutoCompleteTextView
                android:id="@+id/actv_content"
                style="@style/login_edittext_style"
                android:layout_width="fill_parent"
                android:layout_height="160dp"
                android:layout_gravity="center_horizontal"
                android:gravity="left|top"
                android:hint="@string/publish_msg_type_tip"
                android:inputType="textNoSuggestions"
                android:textSize="@dimen/textsize16" />
"
            <!--
            <RelativeLayout
                android:id="@+id/rl_upload"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marging10" >

                <ImageView
                    android:id="@+id/img_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:scaleType="centerInside"
                    android:src="@drawable/img_buffer"
                    android:text="@string/submit_img"
                    android:textSize="@dimen/textsize17"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_imgUp"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/img_upload"
                    android:gravity="center"
                    android:text="@string/submit_img"
                    android:textSize="@dimen/textsize17"
                    android:textStyle="bold" />
            </RelativeLayout>
            -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="2px"
                android:layout_marginTop="@dimen/marging10"
                android:background="@color/divider" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@color/divider" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        android:orientation="vertical" >

        <Button
            android:id="@+id/bt_send"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/normal_height42"
            android:layout_margin="@dimen/marging10"
            android:background="@drawable/get_money_btn_selector"
            android:gravity="center"
            android:text="@string/question_list_send_answer"
            android:textColor="@color/text_color"
            android:textSize="@dimen/textsize16" />
    </LinearLayout>

</LinearLayout>